@@ -1,5 +1,7 @@
 Search API Autocomplete 1.x, dev (xxxx-xx-xx):
 ----------------------------------------------
+- #1567234 by mlamothe, piggito, drunken monkey: Added a "Live results"
+  suggester.
 - #3003098 by Andreas Radloff, drunken monkey: Fixed compatibility with other
   autocomplete fields on the same page.
 
